# DTRO_Safety_Health_Check

./: .gitignore  dtro_safety.db  main.py  pdf_exporter.py  pyproject.toml  requirements.txt  test_signature.py
components/: styles.py
database/: db_manager.py
utils/: email_sender.py  pdf_exporter.py  report_generator.py
views/: checklist_view.py  history_view.py  settings_view.py  stats_view.py  worker_view.py
