[project]
name = "dtro_safety"
version = "1.0.0"
description = "DTRO 안전보건 체크리스트"
requires-python = ">=3.10"
dependencies = [
    "flet",
]

[tool.flet]
org = "com.dtro"
product = "DTRO 안전계획"

[tool.flet.android]
min_sdk_version = 24
permissions = [
    "WRITE_EXTERNAL_STORAGE",
    "READ_EXTERNAL_STORAGE",
]